; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/omxil/extr_utils.c_OMXCodec_IsBlacklisted.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/omxil/extr_utils.c_OMXCodec_IsBlacklisted.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OMXCodec_IsBlacklisted.blacklisted_prefix = internal global [8 x i8*] [i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.3, i32 0, i32 0), i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.4, i32 0, i32 0), i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.5, i32 0, i32 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.6, i32 0, i32 0), i8* null], align 16
@.str = private unnamed_addr constant [8 x i8] c"OMX.PV.\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"OMX.google.\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"OMX.ARICENT.\00", align 1
@.str.3 = private unnamed_addr constant [20 x i8] c"OMX.SEC.WMV.Decoder\00", align 1
@.str.4 = private unnamed_addr constant [20 x i8] c"OMX.SEC.MP3.Decoder\00", align 1
@.str.5 = private unnamed_addr constant [26 x i8] c"OMX.MTK.VIDEO.DECODER.VC1\00", align 1
@.str.6 = private unnamed_addr constant [16 x i8] c"OMX.SEC.vp8.dec\00", align 1
@OMXCodec_IsBlacklisted.blacklisted_suffix = internal global [3 x i8*] [i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.7, i32 0, i32 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.8, i32 0, i32 0), i8* null], align 16
@.str.7 = private unnamed_addr constant [8 x i8] c".secure\00", align 1
@.str.8 = private unnamed_addr constant [8 x i8] c".sw.dec\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @OMXCodec_IsBlacklisted(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8** getelementptr inbounds ([8 x i8*], [8 x i8*]* @OMXCodec_IsBlacklisted.blacklisted_prefix, i64 0, i64 0), i8*** %6, align 8
  br label %9

9:                                                ; preds = %26, %2
  %10 = load i8**, i8*** %6, align 8
  %11 = load i8*, i8** %10, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %29

13:                                               ; preds = %9
  %14 = load i8*, i8** %4, align 8
  %15 = load i8**, i8*** %6, align 8
  %16 = load i8*, i8** %15, align 8
  %17 = load i8**, i8*** %6, align 8
  %18 = load i8*, i8** %17, align 8
  %19 = call i64 @strlen(i8* %18)
  %20 = load i32, i32* %5, align 4
  %21 = call i64 @__MIN(i64 %19, i32 %20)
  %22 = call i32 @strncmp(i8* %14, i8* %16, i64 %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %25, label %24

24:                                               ; preds = %13
  store i32 1, i32* %3, align 4
  br label %61

25:                                               ; preds = %13
  br label %26

26:                                               ; preds = %25
  %27 = load i8**, i8*** %6, align 8
  %28 = getelementptr inbounds i8*, i8** %27, i32 1
  store i8** %28, i8*** %6, align 8
  br label %9

29:                                               ; preds = %9
  store i8** getelementptr inbounds ([3 x i8*], [3 x i8*]* @OMXCodec_IsBlacklisted.blacklisted_suffix, i64 0, i64 0), i8*** %7, align 8
  br label %30

30:                                               ; preds = %57, %29
  %31 = load i8**, i8*** %7, align 8
  %32 = load i8*, i8** %31, align 8
  %33 = icmp ne i8* %32, null
  br i1 %33, label %34, label %60

34:                                               ; preds = %30
  %35 = load i8**, i8*** %7, align 8
  %36 = load i8*, i8** %35, align 8
  %37 = call i64 @strlen(i8* %36)
  store i64 %37, i64* %8, align 8
  %38 = load i32, i32* %5, align 4
  %39 = zext i32 %38 to i64
  %40 = load i64, i64* %8, align 8
  %41 = icmp ugt i64 %39, %40
  br i1 %41, label %42, label %56

42:                                               ; preds = %34
  %43 = load i8*, i8** %4, align 8
  %44 = load i32, i32* %5, align 4
  %45 = zext i32 %44 to i64
  %46 = getelementptr inbounds i8, i8* %43, i64 %45
  %47 = load i64, i64* %8, align 8
  %48 = sub i64 0, %47
  %49 = getelementptr inbounds i8, i8* %46, i64 %48
  %50 = load i8**, i8*** %7, align 8
  %51 = load i8*, i8** %50, align 8
  %52 = load i64, i64* %8, align 8
  %53 = call i32 @strncmp(i8* %49, i8* %51, i64 %52)
  %54 = icmp ne i32 %53, 0
  br i1 %54, label %56, label %55

55:                                               ; preds = %42
  store i32 1, i32* %3, align 4
  br label %61

56:                                               ; preds = %42, %34
  br label %57

57:                                               ; preds = %56
  %58 = load i8**, i8*** %7, align 8
  %59 = getelementptr inbounds i8*, i8** %58, i32 1
  store i8** %59, i8*** %7, align 8
  br label %30

60:                                               ; preds = %30
  store i32 0, i32* %3, align 4
  br label %61

61:                                               ; preds = %60, %55, %24
  %62 = load i32, i32* %3, align 4
  ret i32 %62
}

declare dso_local i32 @strncmp(i8*, i8*, i64) #1

declare dso_local i64 @__MIN(i64, i32) #1

declare dso_local i64 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
